--- a/crewai/pyproject.toml
+++ b/crewai/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "httpx>=0.28.0",
     "langchain-openai>=0.3.0",
     "openai>=1.60.0",
+    "playwright>=1.49.0",
 ]
 
 [project.optional-dependencies]
