fix: Improve Dependabot configuration and CI/CD error handling
- Configure Dependabot to ignore major version updates for critical packages
- Add dependency verification step in CI/CD pipeline
- Add Dependabot validator workflow to catch breaking changes
- Improve build error messages
- Update DevOps documentation

This prevents Dependabot PRs from breaking the build with incompatible major version updates (e.g., @types/node 20->25, Next.js major updates).

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,24 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
+    # Ignore major version updates for critical packages
+    ignore:
+      # Ignore major version updates for @types/node (20 -> 25 breaks compatibility)
+      - dependency-name: "@types/node"
+        update-types: ["version-update:semver-major"]
+      # Ignore major version updates for Next.js (requires manual review)
+      - dependency-name: "next"
+        update-types: ["version-update:semver-major"]
+      # Ignore major version updates for React (requires manual review)
+      - dependency-name: "react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "react-dom"
+        update-types: ["version-update:semver-major"]
+      # Ignore major version updates for TypeScript (requires manual review)
+      - dependency-name: "typescript"
+        update-types: ["version-update:semver-major"]
+    # Allow minor and patch updates only for these
+    versioning-strategy: increase
 
   # Enable version updates for Python
   - package-ecosystem: "pip"
@@ -29,4 +47,9 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
+    # Ignore major version updates for critical Python packages
+    ignore:
+      - dependency-name: "python"
+        update-types: ["version-update:semver-major"]
+
 
