--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,12 +34,27 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Verify critical dependencies
+        run: |
+          echo "Verifying critical dependency versions..."
+          pnpm list next react react-dom typescript @types/node --depth=0 || true
+          echo "✅ Dependency check complete"
+
       - name: Run ESLint
         run: pnpm lint
         continue-on-error: true
 
       - name: Build Next.js
-        run: pnpm build
+        run: |
+          echo "🔨 Building Next.js application..."
+          pnpm build || {
+            echo "❌ Build failed. This might be due to:"
+            echo "  1. Dependency version incompatibility"
+            echo "  2. Type errors"
+            echo "  3. Missing environment variables"
+            echo "Check the logs above for details."
+            exit 1
+          }
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL || 'https://placeholder.supabase.co' }}
           NEXT_PUBLIC_MAPBOX_TOKEN: ${{ secrets.NEXT_PUBLIC_MAPBOX_TOKEN || 'pk.test' }}
@@ -121,7 +136,7 @@ jobs:
     name: Deploy to Vercel
     runs-on: ubuntu-latest
     needs: [frontend, typecheck]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && !contains(github.event.head_commit.message, '[skip deploy]')
     
     steps:
       - name: Checkout code
@@ -156,4 +171,5 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           vercel-args: '--prod'
+
 
