feat: Add comprehensive debugging tools for CI/CD
- Add local debug script (scripts/debug.sh) for pre-push checks
- Add GitHub Actions debug workflow for remote debugging
- Fix dependabot.yml syntax error (remove invalid versioning-strategy)
- Improve CI/CD dependency verification (avoid pnpm list errors)
- Add comprehensive debug guide documentation

This helps identify and fix CI/CD issues before they reach production.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,8 +36,11 @@ jobs:
 
       - name: Verify critical dependencies
         run: |
-          echo "Verifying critical dependency versions..."
-          pnpm list next react react-dom typescript @types/node --depth=0 || true
+          echo "🔍 Verifying critical dependency versions..."
+          echo ""
+          echo "Checking package.json for critical packages:"
+          grep -E '"next"|"react"|"react-dom"|"typescript"|"@types/node"' package.json || echo "⚠️ Some packages not found in package.json"
+          echo ""
           echo "✅ Dependency check complete"
 
       - name: Run ESLint
