--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.24.7",
     "html2canvas": "^1.4.1",
+    "json-logic-js": "^2.0.5",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.17.0",
