--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,10 @@
   },
   "include": [
     "next-env.d.ts",
+    "src/types.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.d.ts",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
