--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "tsx scripts/seed-runner.ts",
     "seed:clear": "tsx -e \"import('./scripts/seed').then(m => m.clearExistingData())\"",
     "simulate:user": "tsx scripts/simulate-complete-user.ts",
+    "simulate:10users": "tsx scripts/simulate-10-users.ts",
     "fix:trigger": "tsx scripts/fix-trigger.ts",
     "bmad:setup": "bash bmad/scripts/setup.sh",
     "bmad:start": "bash bmad/scripts/quick_start.sh",
