feat: Add signals components, draggable route stops, and route export functionality
- Add PropertySignals component for displaying property signals
- Add ReportSignalButtons for reporting signals
- Add DraggableRouteStopsList with drag-and-drop reordering
- Add route export functionality (text, JSON, shareable links)
- Update route pages and components with new features
- Update API routes for better signal handling
- Update property detail page with signals integration

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "bmad:track": "python3 bmad/scripts/feature_tracker.py"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fontsource-variable/plus-jakarta-sans": "^5.2.8",
     "@fontsource-variable/syne": "^5.2.7",
     "@hookform/resolvers": "^5.2.2",
