feat: Implement Waze-style property signals with temporal decay and community confirmation
- Add property_signals_raw table for individual signal events
- Add property_signal_state table with strength, confirmed, last_seen_at
- Implement temporal decay: 0-7 days (100%), 8-14 (70%), 15-30 (40%), +30 (10%)
- Auto-confirmation: ≥3 unique users within 30 days
- Update PropertySignals component to show strength and confirmed status
- Add cron job for automatic recalculation every 6 hours
- Fix API to use correct table name (property_signal_state)
- Enable realtime updates for signal state changes

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
     {
       "path": "/api/alerts/process",
       "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/signals/recalculate",
+      "schedule": "0 */6 * * *"
     }
   ]
 }
