--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,11 @@
   "crons": [
     {
       "path": "/api/alerts/process",
-      "schedule": "*/15 * * * *"
+      "schedule": "0 0 * * *"
     },
     {
       "path": "/api/signals/recalculate",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
