fix: Create unified daily cron endpoint and fix syntax error in alerts/process

--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,7 @@
   "framework": "nextjs",
   "crons": [
     {
-      "path": "/api/alerts/process",
-      "schedule": "0 0 * * *"
-    },
-    {
-      "path": "/api/signals/recalculate",
+      "path": "/api/cron/daily",
       "schedule": "0 0 * * *"
     }
   ]
