--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "framework": "nextjs",
-  "crons": [
-    {
-      "path": "/api/cron/daily",
-      "schedule": "0 0 * * *"
-    }
-  ]
+  "framework": "nextjs"
 }
