feat: Add comprehensive mobile design testing with Playwright
- Add Playwright configuration for 5 mobile devices (iPhone SE, iPhone 12, iPhone 14 Pro Max, iPad Mini, iPad Pro)
- Create mobile test suite for all dashboard pages (dashboard, properties, offers, visits, routes)
- Implement AuthHelper and MobileChecks helpers for mobile-specific validations
- Add 26 tests covering responsive design, touch targets, overflow, sidebar behavior
- Include automated test runner script and comprehensive documentation
- Total: 130 validations (26 tests × 5 devices)

Tests validate:
- No horizontal overflow
- Responsive layouts at all breakpoints
- Mobile-friendly modals and dialogs
- Adequate touch target sizes (44x44px minimum)
- Sidebar collapse behavior on mobile
- Text readability
- Responsive images
- Viewport meta tags
- Orientation change handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-*.egg-info/
-dist/
-build/
-
-# bmad logs and reports (keep tracking)
-bmad/logs/*.log
-bmad/reports/*.json
-!bmad/tracking/
-!bmad/logs/.gitkeep
-!bmad/reports/.gitkeep
-
-# Python
-__pycache__/
-*.py[cod]
-*.class
-.pytest_cache/
-*.egg-info/
-.ruff_cache/
-.serena/
+# Playwright
+/playwright-report*/
+/test-results/
+/playwright/.cache/
