--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "bmad:setup": "bash bmad/scripts/setup.sh",
     "bmad:start": "bash bmad/scripts/quick_start.sh",
     "bmad:status": "python3 bmad/scripts/feature_tracker.py --report",
-    "bmad:track": "python3 bmad/scripts/feature_tracker.py"
+    "bmad:track": "python3 bmad/scripts/feature_tracker.py",
+    "test:mobile": "playwright test --config=playwright.mobile.config.ts",
+    "test:mobile:ui": "playwright test --config=playwright.mobile.config.ts --ui",
+    "test:mobile:debug": "playwright test --config=playwright.mobile.config.ts --debug"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -70,6 +73,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
     "@tailwindcss/postcss": "^4",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
