--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,129 @@
-# Playwright
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
 /playwright-report*/
 /test-results/
 /playwright/.cache/
+coverage/
+
+# Next.js
+/.next/
+/out/
+next-env.d.ts
+tsconfig.tsbuildinfo
+
+# Production
+/build
+/dist
+
+# Misc
+.DS_Store
+*.pem
+*.log
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Local env files
+.env*.local
+.env
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Python (CrewAI)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+crewai/venv/
+crewai/env/
+crewai/.venv/
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+.coverage
+htmlcov/
+
+# BMAD
+bmad/logs/
+.serena/
+
+# Scripts temporales (no committear)
+scripts/*-only.ts
+scripts/*-simple.ts
+scripts/check-and-generate-links.ts
+scripts/diagnose-*.ts
+scripts/test-*.ts
+scripts/generate-*.ts
+scripts/create-users-*.ts
+
+# Environment
+.env.local
+.env*.local
+
+# Build outputs
+.next/
+out/
+dist/
+build/
+*.tsbuildinfo
+
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# IDE
+.DS_Store
+*.swp
+*.swo
+*~
+.vscode/
+.idea/
+*.sublime-*
+
+# Logs
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+.serena/
+.vercel/
+*.backup
+__pycache__/
+*.pyc
+*.pycache/
+venv/
+.env.example
+
+# BMAD
+bmad/logs/
+bmad/reports/
