--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "bmad:track": "python3 bmad/scripts/feature_tracker.py",
     "test:mobile": "playwright test --config=playwright.mobile.config.ts",
     "test:mobile:ui": "playwright test --config=playwright.mobile.config.ts --ui",
-    "test:mobile:debug": "playwright test --config=playwright.mobile.config.ts --debug"
+    "test:mobile:debug": "playwright test --config=playwright.mobile.config.ts --debug",
+    "test:e2e": "playwright test --config=playwright.config.ts",
+    "test:e2e:ui": "playwright test --config=playwright.config.ts --ui",
+    "test:e2e:debug": "playwright test --config=playwright.config.ts --debug"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
