fix(sw): disable service worker in development to prevent chrome-extension errors
- Disable service worker registration in development mode
- Add early return in fetch handler for development
- Filter unsupported request schemes (chrome-extension://, etc.)
- Improve error handling in cache operations
- Fix cleanup of intervals and event listeners in PWAProvider
- Remove backup migration file
- Add clear-cache.sh script for development
- Minor fixes in notifications, map, and routes components

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test:mobile:debug": "playwright test --config=playwright.mobile.config.ts --debug",
     "test:e2e": "playwright test --config=playwright.config.ts",
     "test:e2e:ui": "playwright test --config=playwright.config.ts --ui",
-    "test:e2e:debug": "playwright test --config=playwright.config.ts --debug"
+    "test:e2e:debug": "playwright test --config=playwright.config.ts --debug",
+    "clear-cache": "bash scripts/clear-cache.sh"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
